# ALLSIDES_assignment

./: .clang-format  CMakeLists.txt  README.md  test_hdr_py.py
include/: BaseFrame.hpp  ExposureTime.hpp  FakeCamera.hpp  HdrCombiner.hpp  Sensor.hpp  SyntheticScene.hpp  ToneMapper.hpp
src/: hdr_py.cpp  main.cpp
